templates/couchdb-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:2.1.1
          ports:
            - containerPort: 5984
