templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - name: main
      protocol: TCP
      port: 8030
      targetPort: 8030
