templates/jobmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobmanager
spec:
  selector:
    app: jobmanager
  ports:
    - name: main
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: manager
      protocol: TCP
      port: 6123
      targetPort: 6123
