templates/taskmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmanager
spec:
  selector:
    app: taskmanager
  ports:
    - name: main
      protocol: TCP
      port: 8099
      targetPort: 8099
